--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
     </header>
     <main> 
-        <div class="price-and-sharp-box row">
+        <div class="price-and-sharp-and-contact-box row">
             <div class="price-box">
                 <div class="heading-title">
                     <h2>Ceník</h2>
@@ -85,17 +85,29 @@
                     <li>Hokej: 2000 Kč / blok</li>
                 </ul>
             </div>
-            <div class="sharp-box">
-                <div class="heading-title">
-                    <h2>Broušení bruslí</h2>
+            <div class="right-side">
+                <div class="sharp-box">
+                    <div class="heading-title">
+                        <h2>Broušení bruslí</h2>
+                    </div>
+                    <div class="hr-white row"><hr></div>
+                    <ul class="list-opening-time">
+                        <li>Pondělí: 16:00 - 17:45</li>
+                        <li>Čtvrtek: 16:00 - 17:45</li>
+                    </ul>
+                    <p>Brusle Vám nabrousíme vždy ve výše uvedené (pracovní) dny v dřevěném stánku,<br>který se nachází v těsné blízkosti finančního úřadu a poblíž kavárny Kafé v kině.</p>
                 </div>
-                <div class="hr-white row"><hr></div>
-                <div class="empty-space-sharp"></div>
-                <ul class="list-opening-time">
-                    <li>Pondělí: 16:00 - 17:45</li>
-                    <li>Čtvrtek: 16:00 - 17:45</li>
-                </ul>
-                <p>Brusle Vám nabrousíme vždy ve výše uvedené (pracovní) dny v dřevěném stánku,<br>který se nachází v těsné blízkosti finančního úřadu a poblíž kavárny Kafé v kině.</p>
+                <div class="contact-box">
+                    <div class="heading-title">
+                        <h2>Kontakt</h2>
+                    </div>
+                    <div class="hr-white row"><hr></div>
+                    <ul class="list-contact">
+                        <li>Telefonní číslo: + 420 724 614 833</li>
+                        <li>Email: ellpancini2023@gmail.com</li>
+                        <li>Adresa: Náměstí Míru 664, Veselí nad Moravou, Czech Republic</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </main>
