--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <ul class="nav-bar-lists">
                 <li class="nav-bar-list"><a href="#">Rozpis bruslení</a>
                 </li>
-                <li class="nav-bar-list"><a href="#">Ceník</a></li>
-                <li class="nav-bar-list"><a href="#">Broušení bruslí</a></li>
-                <li class="nav-bar-list"><a href="#">Webkamera</a></li>
-               <li class="nav-bar-list"><a href="#">Kontakt / Rezervace</a></li>
+                <li class="nav-bar-list"><a href="#pricing">Ceník</a></li>
+                <li class="nav-bar-list"><a href="#pricing">Broušení bruslí</a></li>
+                <li class="nav-bar-list"><a href="#webkamera-slide">Webkamera</a></li>
+               <li class="nav-bar-list"><a href="#pricing">Kontakt / Rezervace</a></li>
            </ul>
         </div>
         <div class="secret-back"></div>
@@ -59,7 +59,8 @@
             </div>
         </div>
     </header>
-    <main> 
+    <main>
+        <div id="pricing" class="pricing-empty-space"></div>
         <div class="price-and-sharp-and-contact-box row">
             <div class="price-box">
                 <div class="heading-title">
@@ -109,6 +110,13 @@
                     </ul>
                 </div>
             </div>
+        </div>
+        <div id="webkamera-slide"class="webkamera row">
+            <div class="heading-title-black">
+                <h2>Webkamera</h2>
+            </div>
+            <div class="hr-red row"><hr></div>
+            <iframe id="blockrandom" name="iframe" src="https://g0.ipcamlive.com/player/player.php?alias=65645d56307e4" width="100%" height="500" scrolling="auto" frameborder="1" title="Web Kamera" class="wrapper"></iframe>
         </div>
     </main>
 </body>
