úprava ceníku, broušení a kontaktu

--- a/index.html
+++ b/index.html
@@ -61,13 +61,14 @@
     </header>
     <main>
         <div id="pricing" class="pricing-empty-space"></div>
-        <div class="price-and-sharp-and-contact-box row">
+        <div class="price-and-sharpContact-box row">
+
             <div class="price-box">
-                <div class="heading-title">
-                    <h2>Ceník</h2>
+                <div class="heading-title-black">
+                    <h2 class="heading-title-black-h2">Ceník</h2>
                 </div>
-                <div class="hr-white row"><hr></div>
-                <h3>Veřejné bruslení:</h3>
+                <div class="hr-red row"><hr></div>
+                <h3 class="public-h3">Veřejné bruslení:</h3>
                 <ul class="list-public-skating">
                     <li>Děti do 6 let: Zdarma</li>
                     <li>6 - 15 let(mládež): 40 Kč / blok
@@ -78,7 +79,7 @@
                     <li>Karta občana - dospělý: 40 Kč / blok</li>
                     <li>Karta občana - mládež: 25 Kč / blok</li>
                 </ul>
-                <h3>Pronájem kluziště</h3>
+                <h3 class="public-h3">Pronájem kluziště:</h3>
                 <ul class="list-hockey">
                     <li>Veselské školy: 400 Kč / blok</li>
                     <li>Mimo veselské školy: 600 Kč / blok</li>
@@ -86,32 +87,40 @@
                     <li>Hokej: 2000 Kč / blok</li>
                 </ul>
             </div>
-            <div class="right-side">
+
+            <div class="sharpContact-box">
                 <div class="sharp-box">
-                    <div class="heading-title">
-                        <h2>Broušení bruslí</h2>
+                    <div class="heading-title-black">
+                        <h2 class="heading-title-black-h2">Broušení bruslí</h2>
                     </div>
-                    <div class="hr-white row"><hr></div>
+                    <div class="hr-red row"><hr></div>
                     <ul class="list-opening-time">
                         <li>Pondělí: 16:00 - 17:45</li>
                         <li>Čtvrtek: 16:00 - 17:45</li>
                     </ul>
-                    <p>Brusle Vám nabrousíme vždy ve výše uvedené (pracovní) dny v dřevěném stánku,<br>který se nachází v těsné blízkosti finančního úřadu a poblíž kavárny Kafé v kině.</p>
+                    <p class="sharp-box-paragraph">Brusle Vám nabrousíme vždy ve výše uvedené (pracovní) dny v dřevěném stánku který se nachází v těsné blízkosti finančního úřadu a poblíž kavárny Kafé v kině.</p>
                 </div>
+                
+                <div class="hr-red"><hr></div>
+
                 <div class="contact-box">
-                    <div class="heading-title">
-                        <h2>Kontakt</h2>
+                    <div class="heading-title-black">
+                        <h2 class="heading-title-black-h2">Kontakt</h2>
                     </div>
-                    <div class="hr-white row"><hr></div>
+                    <div class="hr-red row"><hr></div>
                     <ul class="list-contact">
                         <li>Telefonní číslo: + 420 724 614 833</li>
                         <li>Email: ellpancini2023@gmail.com</li>
                         <li>Adresa: Náměstí Míru 664, Veselí nad Moravou, Czech Republic</li>
                     </ul>
                 </div>
+                
             </div>
         </div>
-        <div id="webkamera-slide"class="webkamera row">
+
+        <div class="pricing-empty-space"></div>
+
+        <div id="webkamera-slide" class="webkamera row">
             <div class="heading-title-black">
                 <h2>Webkamera</h2>
             </div>
