--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styly.css">
+    <link rel="stylesheet" href="queries.css">
     <title>Kluziště v centru / Veselí nad Moravou / za kinem Morava</title>
 </head>
 <body>
     <header> 
-        <div class="heading-photo">
+        <div class="heading-photo row">
             <a href="index.html"><img src="img/kluzistevcentru-removebg-preview.png" alt=""></a>
         </div>
-        <div class="nav-bar">
+        <div class="nav-bar row">
             <ul class="nav-bar-lists">
                 <li class="nav-bar-list"><a href="#">Rozpis bruslení</a>
                 </li>
@@ -21,15 +22,19 @@
                <li class="nav-bar-list"><a href="#pricing">Kontakt / Rezervace</a></li>
            </ul>
         </div>
-        <div class="secret-back"></div>
-        <div class="hr-red row"><hr></div>
+        <div class="hr-red-heading row"><hr></div>
+        <h1 id="main-heading" class="row">Zimní radovánky přímo v centru města – přijďte na kluziště v centru Veselí nad Moravou!</h1>
+    </header>
+    <main>
+        <div class="pricing-empty-space"></div>
         <div class="partners">
-            <div class="heading-title">
+            <div class="heading-title-black">
                 <h2>Naši partneři</h2>
             </div>
+            <div class="hr-red-heading row"><hr></div>
             <div class="partners-photos row">
                 <img src="img/aaakcent.jpg" alt="">
-                <img src="img/agg.jpg" alt="">
+                <a href="https://agg.cz/"><img src="img/agg.jpg" alt=""></a>
                 <img src="img/biogena.jpg" alt="">
                 <img src="img/dogindock1.jpg" alt="">
                 <img src="img/florstyle.jpg" alt="">
@@ -58,8 +63,6 @@
                 <img src="img/zlomek.jpg" alt="">
             </div>
         </div>
-    </header>
-    <main>
         <div id="pricing" class="pricing-empty-space"></div>
         <div class="price-and-sharpContact-box row">
 
@@ -101,7 +104,7 @@
                     <p class="sharp-box-paragraph">Brusle Vám nabrousíme vždy ve výše uvedené (pracovní) dny v dřevěném stánku který se nachází v těsné blízkosti finančního úřadu a poblíž kavárny Kafé v kině.</p>
                 </div>
                 
-                <div class="hr-red"><hr></div>
+                <div class="hr-red" id="hr-red-sharp-contact"><hr></div>
 
                 <div class="contact-box">
                     <div class="heading-title-black">
@@ -114,19 +117,16 @@
                         <li>Adresa: Náměstí Míru 664, Veselí nad Moravou, Czech Republic</li>
                     </ul>
                 </div>
-                
             </div>
         </div>
-
         <div class="pricing-empty-space"></div>
-
-        <div id="webkamera-slide" class="webkamera row">
+        <!-- <div id="webkamera-slide" class="webkamera row">
             <div class="heading-title-black">
                 <h2>Webkamera</h2>
             </div>
             <div class="hr-red row"><hr></div>
             <iframe id="blockrandom" name="iframe" src="https://g0.ipcamlive.com/player/player.php?alias=65645d56307e4" width="100%" height="500" scrolling="auto" frameborder="1" title="Web Kamera" class="wrapper"></iframe>
-        </div>
+        </div> -->
     </main>
 </body>
 </html>
