přidání webkamera webu

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styly.css">
     <link rel="stylesheet" href="queries.css">
+    <link rel="icon" href="img/iceskates2.png">
     <title>Kluziště v centru / Veselí nad Moravou / za kinem Morava</title>
 </head>
 <body>
@@ -18,12 +19,12 @@
                 </li>
                 <li class="nav-bar-list"><a href="#pricing">Ceník</a></li>
                 <li class="nav-bar-list"><a href="#pricing">Broušení bruslí</a></li>
-                <li class="nav-bar-list"><a href="#webkamera-slide">Webkamera</a></li>
+                <li class="nav-bar-list"><a href="webkamera.html">Webkamera</a></li>
                <li class="nav-bar-list"><a href="#pricing">Kontakt / Rezervace</a></li>
            </ul>
         </div>
         <div class="hr-red-heading row"><hr></div>
-        <h1 id="main-heading" class="row">Zimní radovánky přímo v centru města – přijďte na kluziště v centru Veselí nad Moravou!</h1>
+        <h1 id="main-heading" class="row">Zimní <span class="bold-letters">radovánky</span> přímo v centru města – <span class="bold-letters">přijďte na kluziště</span> ve Veselí nad Moravou!</h1>
     </header>
     <main>
         <div class="pricing-empty-space"></div>
@@ -34,7 +35,7 @@
             <div class="hr-red-heading row"><hr></div>
             <div class="partners-photos row">
                 <img src="img/aaakcent.jpg" alt="">
-                <a href="https://agg.cz/"><img src="img/agg.jpg" alt=""></a>
+                <a href="https://agg.cz/" target="_blank"><img src="img/agg.jpg" alt=""></a>
                 <img src="img/biogena.jpg" alt="">
                 <img src="img/dogindock1.jpg" alt="">
                 <img src="img/florstyle.jpg" alt="">
