--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <header> 
         <div class="heading-photo row">
-            <a href="index.html"><img src="img/kluzistevcentru-removebg-preview.png" alt=""></a>
+            <a href="index.html"><img id="heading-photo-big-version" src="img/kluzistevcentru-removebg-preview.png" alt=""></a>
+            <a href="index.html"><img id="heading-photo-small-version" src="img/male-logo-kluziste.png" alt=""></a>
+            <img id="hamburger-menu-small-version" src="img/hamburger-menu-white.png" alt="">
         </div>
         <div class="nav-bar row">
             <ul class="nav-bar-lists">
