--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <header> 
         <div class="heading-photo row">
             <a href="index.html"><img id="heading-photo-big-version" src="img/kluzistevcentru-removebg-preview.png" alt=""></a>
-            <a href="index.html"><img id="heading-photo-small-version" src="img/male-logo-kluziste.png" alt=""></a>
-            <img id="hamburger-menu-small-version" src="img/hamburger-menu-white.png" alt="">
+        </div>
+        <div class="heading-photo-small-version">
+            <a href="index.html"><img id="heading-photo-small-version-img" src="img/male-logo-kluziste.png" alt=""></a>
+            <img id="hamburger-menu-small-version-img" src="img/hamburger-menu-white.png" alt="">
         </div>
         <div class="nav-bar row">
             <ul class="nav-bar-lists">
