--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             <a href="index.html"><img id="heading-photo-small-version-img" src="img/male-logo-kluziste.png" alt=""></a>
             <img id="hamburger-menu-small-version-img" src="img/hamburger-menu-white.png" alt="">
         </div>
+        <div class="navBar-small-version">
+            
+        </div>
         <div class="nav-bar row">
             <ul class="nav-bar-lists">
                 <li class="nav-bar-list"><a href="#">Rozpis bruslení</a>
@@ -133,5 +136,6 @@
             <iframe id="blockrandom" name="iframe" src="https://g0.ipcamlive.com/player/player.php?alias=65645d56307e4" width="100%" height="500" scrolling="auto" frameborder="1" title="Web Kamera" class="wrapper"></iframe>
         </div> -->
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
