--- a/webkamera.html
+++ b/webkamera.html
@@ -10,7 +10,7 @@
 <body>
     <header> 
         <div class="heading-photo row">
-            <a href="index.html"><img src="img/kluzistevcentru-removebg-preview.png" alt=""></a>
+            <a href="index.html"><img id="heading-photo-big-version" src="img/kluzistevcentru-removebg-preview.png" alt=""></a>
         </div>
         <div class="nav-bar row">
             <ul class="nav-bar-lists">
