přidání papíru na rozpis bruslení

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="nav-bar row">
             <ul class="nav-bar-lists">
-                <li class="nav-bar-list"><a href="#">Rozpis bruslení</a>
+                <li class="nav-bar-list"><a href="Rozpis bruslení.pdf" target="_blank">Rozpis bruslení</a>
                 </li>
                 <li class="nav-bar-list"><a href="#pricing">Ceník</a></li>
                 <li class="nav-bar-list"><a href="#pricing">Broušení bruslí</a></li>
