dělání hlavičky v js

--- a/index.html
+++ b/index.html
@@ -10,15 +10,21 @@
 </head>
 <body>
     <header> 
+        <div class="full-background-small-version">
+            <a href="index.html"><img id="title-small-main-logo" src="img/male-logo-kluziste.png" alt=""></a>
+            <ul class="menu-all-list-small-version">
+                <li class="menu-one-list-small-version"><a href="Rozpis bruslení.pdf" target="_blank">Rozpis bruslení</a>
+                </li>
+                <li class="menu-one-list-small-version"><a href="#pricing">Ceník</a></li>
+                <li class="menu-one-list-small-version"><a href="#pricing">Broušení bruslí</a></li>
+                <li class="menu-one-list-small-version"><a href="webkamera.html">Webkamera</a></li>
+                <li class="menu-one-list-small-version"><a href="#pricing">Kontakt / Rezervace</a></li>
+            </ul>
+            <img id="hamburger-small-version" src="img/hamburger-menu-white.png" alt="">
+        </div>
+
         <div class="heading-photo row">
             <a href="index.html"><img id="heading-photo-big-version" src="img/kluzistevcentru-removebg-preview.png" alt=""></a>
-        </div>
-        <div class="heading-photo-small-version">
-            <a href="index.html"><img id="heading-photo-small-version-img" src="img/male-logo-kluziste.png" alt=""></a>
-            <img id="hamburger-menu-small-version-img" src="img/hamburger-menu-white.png" alt="">
-        </div>
-        <div class="navBar-small-version">
-            
         </div>
         <div class="nav-bar row">
             <ul class="nav-bar-lists">
@@ -31,7 +37,7 @@
            </ul>
         </div>
         <div class="hr-red-heading row"><hr></div>
-        <h1 id="main-heading" class="row">Zimní <span class="bold-letters">radovánky</span> přímo v centru města – <span class="bold-letters">přijďte na kluziště</span> ve Veselí nad Moravou!</h1>
+        <h1 id="main-heading" class="row">Zimní <span class="bold-letters">radovánky</span> přímo v centru města – <br><span class="bold-letters">přijďte na kluziště</span> ve Veselí nad Moravou!</h1>
     </header>
     <main>
         <div class="pricing-empty-space"></div>
