navBar pro webkameru

--- a/webkamera.html
+++ b/webkamera.html
@@ -5,10 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/iceskates2.png">
     <link rel="stylesheet" href="styly.css">
+    <link rel="stylesheet" href="queries.css">
     <title>Webkamera / Kluziště v Centru / Veselí nad Moravou</title>
 </head>
 <body>
-    <header> 
+    <header>
+        <div class="full-background-small-version">
+            <a href="index.html"><img id="title-small-main-logo" src="img/male-logo-kluziste.png" alt=""></a>
+            <ul class="menu-all-list-small-version">
+                <li class="menu-one-list-small-version"><a href="Rozpis bruslení.pdf" target="_blank">Rozpis bruslení</a>
+                </li>
+                <li class="menu-one-list-small-version"><a href="index.html#pricing">Ceník</a></li>
+                <li class="menu-one-list-small-version"><a href="index.html#pricing">Broušení bruslí</a></li>
+                <li class="menu-one-list-small-version"><a href="index.htmlwebkamera.html">Webkamera</a></li>
+                <li class="menu-one-list-small-version"><a href="index.html#pricing">Kontakt / Rezervace</a></li>
+            </ul>
+            <img id="hamburger-small-version" src="img/hamburger-menu-white.png" alt="">
+        </div>
+
         <div class="heading-photo row">
             <a href="index.html"><img id="heading-photo-big-version" src="img/kluzistevcentru-removebg-preview.png" alt=""></a>
         </div>
@@ -31,5 +45,6 @@
             <iframe id="blockrandom" name="iframe" src="https://g0.ipcamlive.com/player/player.php?alias=65645d56307e4" width="100%" height="500" scrolling="auto" frameborder="1" title="Web Kamera" class="wrapper"></iframe>
         </div>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
