--- a/webkamera.html
+++ b/webkamera.html
@@ -16,9 +16,9 @@
                 <li class="menu-one-list-small-version"><a href="Rozpis bruslení.pdf" target="_blank">Rozpis bruslení</a>
                 </li>
                 <li class="menu-one-list-small-version"><a href="index.html#pricing">Ceník</a></li>
-                <li class="menu-one-list-small-version"><a href="index.html#pricing">Broušení bruslí</a></li>
+                <li class="menu-one-list-small-version"><a href="index.html#sharping">Broušení bruslí</a></li>
                 <li class="menu-one-list-small-version"><a href="index.htmlwebkamera.html">Webkamera</a></li>
-                <li class="menu-one-list-small-version"><a href="index.html#pricing">Kontakt / Rezervace</a></li>
+                <li class="menu-one-list-small-version"><a href="index.html#contacting">Kontakt / Rezervace</a></li>
             </ul>
             <img id="hamburger-small-version" src="img/hamburger-menu-white.png" alt="">
         </div>
@@ -30,10 +30,10 @@
             <ul class="nav-bar-lists">
                 <li class="nav-bar-list"><a href="#">Rozpis bruslení</a>
                 </li>
-                <li class="nav-bar-list"><a href="index.html">Ceník</a></li>
-                <li class="nav-bar-list"><a href="index.html">Broušení bruslí</a></li>
+                <li class="nav-bar-list"><a href="index.html#pricing">Ceník</a></li>
+                <li class="nav-bar-list"><a href="index.html#sharping">Broušení bruslí</a></li>
                 <li class="nav-bar-list"><a href="webkamera.html">Webkamera</a></li>
-               <li class="nav-bar-list"><a href="index.html">Kontakt / Rezervace</a></li>
+               <li class="nav-bar-list"><a href="index.html#contacting">Kontakt / Rezervace</a></li>
            </ul>
         </div>
         <div class="hr-red-heading row"><hr></div>
