--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                 <li class="menu-one-list-small-version"><a href="Rozpis bruslení.pdf" target="_blank">Rozpis bruslení</a>
                 </li>
                 <li class="menu-one-list-small-version"><a href="#pricing">Ceník</a></li>
-                <li class="menu-one-list-small-version"><a href="#pricing">Broušení bruslí</a></li>
+                <li class="menu-one-list-small-version"><a href="#sharping">Broušení bruslí</a></li>
                 <li class="menu-one-list-small-version"><a href="webkamera.html">Webkamera</a></li>
-                <li class="menu-one-list-small-version"><a href="#pricing">Kontakt / Rezervace</a></li>
+                <li class="menu-one-list-small-version"><a href="#contacting">Kontakt / Rezervace</a></li>
             </ul>
             <img id="hamburger-small-version" src="img/hamburger-menu-white.png" alt="">
         </div>
@@ -31,9 +31,9 @@
                 <li class="nav-bar-list"><a href="Rozpis bruslení.pdf" target="_blank">Rozpis bruslení</a>
                 </li>
                 <li class="nav-bar-list"><a href="#pricing">Ceník</a></li>
-                <li class="nav-bar-list"><a href="#pricing">Broušení bruslí</a></li>
+                <li class="nav-bar-list"><a href="#sharping">Broušení bruslí</a></li>
                 <li class="nav-bar-list"><a href="webkamera.html">Webkamera</a></li>
-               <li class="nav-bar-list"><a href="#pricing">Kontakt / Rezervace</a></li>
+                <li class="nav-bar-list"><a href="#contacting">Kontakt / Rezervace</a></li>
            </ul>
         </div>
         <div class="hr-red-heading row"><hr></div>
@@ -77,10 +77,10 @@
                 <img src="img/zlomek.jpg" alt="">
             </div>
         </div>
-        <div id="pricing" class="pricing-empty-space"></div>
+        <div class="pricing-empty-space"></div>
         <div class="price-and-sharpContact-box row">
 
-            <div class="price-box">
+            <div id="pricing" class="price-box">
                 <div class="heading-title-black">
                     <h2 class="heading-title-black-h2">Ceník</h2>
                 </div>
@@ -106,7 +106,7 @@
             </div>
 
             <div class="sharpContact-box">
-                <div class="sharp-box">
+                <div id="sharping" class="sharp-box">
                     <div class="heading-title-black">
                         <h2 class="heading-title-black-h2">Broušení bruslí</h2>
                     </div>
@@ -120,7 +120,7 @@
                 
                 <div class="hr-red" id="hr-red-sharp-contact"><hr></div>
 
-                <div class="contact-box">
+                <div id="contacting" class="contact-box">
                     <div class="heading-title-black">
                         <h2 class="heading-title-black-h2">Kontakt</h2>
                     </div>
